# odorobo

./: .gitignore  Cargo.toml  Containerfile  HACKING.md  README.md  actor_info.txt  justfile
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_riscv_rva23.yml  build_x86.yml  check.yml  clippy.yml  rva23.yml
.zed/: settings.json
docs/: actors.md  ch-passthrough.md  console.md  kademlia_dht.md  networking.md  provisioning.md  scheduler_routes.md  storage.md
docs/schemas/: BalloonConfig.schema.json  ConsoleConfig.schema.json  ConsoleMode.schema.json  CoreSchedulingMode.schema.json  CpuAffinity.schema.json  CpuFeatures.schema.json  CpuTopology.schema.json  CpusConfig.schema.json  DebugConsoleConfig.schema.json  DeviceConfig.schema.json  DeviceNode.schema.json  DiskConfig.schema.json  FsConfig.schema.json  GenericVhostUserConfig.schema.json  ImageType.schema.json  LandlockConfig.schema.json  LockGranularity.schema.json  MemoryConfig.schema.json  MemoryRestoreMode.schema.json  MemoryZoneConfig.schema.json  NetConfig.schema.json  NumaConfig.schema.json  NumaDistance.schema.json  PayloadConfig.schema.json  PciDeviceInfo.schema.json  PciSegmentConfig.schema.json  PlatformConfig.schema.json  PmemConfig.schema.json  RateLimitGroupConfig.schema.json  RateLimiterConfig.schema.json  ReceiveMigrationData.schema.json  RestoreConfig.schema.json  RngConfig.schema.json  SendMigrationData.schema.json  TimeoutStrategy.schema.json  TokenBucket.schema.json  TpmConfig.schema.json  VdpaConfig.schema.json  VirtQueueAffinity.schema.json  VmAddUserDevice.schema.json  (+13 more)
odorobo/: Cargo.toml  config.json
odorobo-agent/: Cargo.toml  config.json
odorobo-agent/src/: lib.rs  main.rs  state.rs  util.rs
odorobo-agent/src/actor/: mod.rs
odorobo-agent/src/api/: ch.rs  console.rs  error.rs  mod.rs  vm.rs
odorobo-agent/src/networking/: actor.rs  messages.rs
odorobo-agent/src/state/: api.rs  devices.rs  instance.rs  mod.rs  transform.rs
odorobo-agent/src/state/provisioning/: hooks.rs  mod.rs
odorobo-agent/src/state/provisioning/actor/: mod.rs
odorobo-agent/src/state/provisioning/hooks/: machined.rs  mod.rs  networking.rs
odorobo-agent/src/state/provisioning/systemd/: mod.rs  proxy.rs
odorobo-agent/src/state/transform/: console.rs  mod.rs  networking.rs  path_verify.rs
odorobo-agent/src/state/transform/storage/: file.rs  iscsi.rs  mod.rs  rbd.rs
odorobo-manager/: Cargo.toml
odorobo-manager/src/: lib.rs  main.rs  scheduler_actor.rs  scheduler_actor_http.rs
odorobo-manager/src/actors/: http_actor.rs  ip_management_actor.rs  mod.rs  scheduler_actor.rs  serial_terminal_websocket_actor.rs  storage_actor.rs
odorobo-manager/src/actors/scheduler_actor/: actor_keepalive.rs  mod.rs
odorobo-manager/src/api/: mod.rs  nodes.rs  types.rs  vms.rs  volumes.rs
odorobo-scheduler/: Cargo.toml
odorobo-scheduler/src/: lib.rs  scheduler_actor.rs
odorobo-shared/: Cargo.toml
odorobo-shared/src/: actor_names.rs  error.rs  kameo_messages.rs  lib.rs  utils.rs
odorobo-shared/src/actor_cache/: mod.rs
odorobo-shared/src/messages/: agent.rs  create_vm.rs  debug.rs  mod.rs  server_status.rs  vm.rs
odorobo/src/: config.rs  main.rs  types.rs
odorobo/src/actors/: agent_actor.rs  http_actor.rs  ip_management_actor.rs  mod.rs  scheduler_actor.rs  serial_terminal_websocket_actor.rs
odorobo/src/ch_api/: mod.rs  vm.rs
odorobo/src/ch_driver/: actor.rs  devices.rs  instance.rs  mod.rs
odorobo/src/ch_driver/provisioning/: mod.rs
odorobo/src/ch_driver/provisioning/hooks/: mod.rs
odorobo/src/ch_driver/transform/: console.rs  networking.rs
odorobo/src/ch_driver/transform/storage/: file.rs  iscsi.rs  mod.rs  rbd.rs
odorobo/src/http_api/: mod.rs  nodes.rs  types.rs  vms.rs  volumes.rs
odorobo/src/messages/: agent.rs  vm.rs
odorobo/src/networking/: actor.rs
odorobo/src/state/: mod.rs
odorobo/src/state/provisioning/: mod.rs
odorobo/src/state/provisioning/actor/: mod.rs
odorobo/src/state/provisioning/hooks/: machined.rs
odorobo/src/state/transform/storage/: mod.rs
odorobo/src/utils/: actor_cache.rs  actor_names.rs  mod.rs
odoroboctl/: Cargo.toml
odoroboctl/src/: cli.rs  main.rs
scripts/: vsock.py  zig-cc-rva23.sh
shared/: Cargo.toml
shared/src/: lib.rs
systemd/: odorobo-agent.service  odorobo-ch@.service  odorobo.service
systemd/scripts/: odorobo-cleanup  odorobo-postflight  odorobo-preflight
