[workspace]
resolver = "3"
members = ["odorobo"]

[workspace.package]
rust-version = "1.95.0"

[workspace.dependencies]
stable-eyre = "0.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
cloud-hypervisor-client = { git = "https://github.com/FyraStack/cloud-hypervisor-client.git" }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["ws"] }
thiserror = "2.0.18"
axum-extra = "0.12"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1" }
kameo = { version = "0.19.2", features = ["remote"] }
libp2p = { version = "0.56.0", features = ["yamux", "serde", "mdns"] }
ahash = { version = "0.8.12", features = ["serde"] }
ulid = { version = "1.2", features = ["serde", "uuid"] }
# aide needs an older version of schemars
schemars = "0.9"
dirs = "6.0.0"
bytesize = { version = "2.3.1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ipnet = {version = "2.12.0", features = ["serde", "schemars08"]}
url = { version = "2.3", features = ["serde"] }
async-trait = "0.1.89"
dashmap = "6.1.0"

# our crates
odorobo = { path = "odorobo" }



# these are for performance optimizations, based on https://nnethercote.github.io/perf-book/build-configuration.html#optimization-level
# these options can take a while to compile (up to 5-10 minutes), so its really only necessary for production binaries.
# also look in .cargo/config.toml for info on microarchitecture optimizations.
[profile.release-optimized]
inherits = "release"

opt-level = 3
lto = "fat"
codegen-units = 1

# we are specifically NOT using panic = "abort" because we need to use catch_unwind for kameo actors on_panic.
# for any crates using kameo actors on_panic, this would literally break the binary.
# For specific crates/binaries this might be something we do, but I (caleb) doubt it.

strip = "symbols" # TODO: this we should talk about doing this, because it makes debugging harder, so if we have a panic in production, the backtrace will likely not be as useful.

incremental = false # this is just to get reproducible builds. incremental compiles aren't consistent and can sometimes be broken when combined with optimizations
