[workspace]
resolver = "3"
members = ["odorobo"]

[workspace.package]
rust-version = "1.95.0"

[workspace.dependencies]
stable-eyre = "0.2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1" }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }


# our crates
odorobo = { path = "odorobo" }



# these are for performance optimizations, based on https://nnethercote.github.io/perf-book/build-configuration.html#optimization-level
# these options can take a while to compile (up to 5-10 minutes), so its really only necessary for production binaries.
# also look in .cargo/config.toml for info on microarchitecture optimizations.
[profile.release-optimized]
inherits = "release"

opt-level = 3
lto = "fat"
codegen-units = 1

# we are specifically NOT using panic = "abort" because we need to use catch_unwind for kameo actors on_panic.
# for any crates using kameo actors on_panic, this would literally break the binary.
# For specific crates/binaries this might be something we do, but I (caleb) doubt it.

strip = "symbols" # TODO: this we should talk about doing this, because it makes debugging harder, so if we have a panic in production, the backtrace will likely not be as useful.

incremental = false # this is just to get reproducible builds. incremental compiles aren't consistent and can sometimes be broken when combined with optimizations
