[package]
name = "odorobo-agent"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
stable-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cloud-hypervisor-client = { workspace = true }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hyperlocal = "0.9.1"
tokio = { version = "1.50.0", features = ["full"] }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["query"] }
axum_responses = "0.5.5"
thiserror = "2.0.18"
