[package]
name = "odorobo-agent"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
stable-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cloud-hypervisor-client = { workspace = true }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hyperlocal = "0.9.1"
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
axum_responses = "0.5.5"
axum-extra = { workspace = true, features = ["query"] }
thiserror = "2.0.18"
futures-util = "0.3.31"
libc = "0.2"
tower-http = { workspace = true, features = ["trace"] }
random-port = "0.1.1"
if-addrs = "0.13"
zbus = "5.14.0"
zbus_systemd = { version = "0.26000.0", features = [
    "machine1",
    "systemd1",
    "zbus-async-tokio",
] }
url = { version = "2.5.8", features = ["serde"] }
async-trait = "0.1.89"
kameo = { workspace = true }
libp2p = { version = "0.56.0", features = ["yamux", "serde", "mdns"] }
ahash = { workspace = true }
sysinfo = "0.38.4"
bytesize = "2.3.1"
odorobo-shared = { workspace = true }
ulid = { workspace = true }
ipnet = { workspace = true }
rtnetlink = "0.20.0"
nftables = { version = "0.6.3", features = ["tokio"] }
