[package]
name = "odorobo-shared"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
kameo = { workspace = true, features = ["remote"] }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true, features = ["yamux", "serde", "mdns", "kad"] }
serde = { workspace = true, features = ["derive"] }
utoipa = { version = "5.4.0", features=["uuid"] }
stable-eyre = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
cloud-hypervisor-client = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
bytesize = { workspace = true }
async-trait = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }