[package]
name = "odorobo"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
stable-eyre = { workspace = true }
clap = {  workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
bytesize = { workspace = true }

http-body-util = "0.1"
hyper = { version = "1.9", features = ["full"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
] }
hyperlocal = "0.9"
axum_responses = "0.5"
thiserror = "2.0"
futures-util = "0.3"
libc = "0.2"
random-port = "0.1"
if-addrs = "0.15"
libp2p = { version = "0.56", features = ["yamux", "serde", "mdns"] }
sysinfo = "0.38"
rtnetlink = "0.21"
nftables = { version = "0.6", features = ["tokio"] }
rand = "0.10"
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.12"
tower-http = { version = "0.6", features = ["trace"] }
kameo = { version = "0.20", features = ["remote"] }
ahash = { version = "0.8", features = ["serde"] }
dirs = "6"
ipnet = {version = "2.12", features = ["serde", "schemars08"]}
url = { version = "2.5", features = ["serde"] }
async-trait = "0.1"
dashmap = "6.1"
api-error = { version = "0.1.3", features = ["axum"] }
http = "1"
tower = "0.5"

aide = { version = "0.15", features = [
    "axum",
    "axum-json",
    "axum-extra",
    "axum-tokio",
    "axum-ws",
    "swagger",
    "macros",
] }
# aide needs an older version of schemars
schemars = "0.9"



cloud-hypervisor-client = { git = "https://github.com/FyraStack/cloud-hypervisor-client.git" }
