[package]
name = "odoroboctl"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
stable-eyre = { workspace = true }
clap = {  workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
